--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-active-menu": "^0.0.14",
     "react-bootstrap": "^2.7.0",
