--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
@@ -20,6 +21,7 @@
     "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-active-menu": "^0.0.14",
+    "react-awesome-reveal": "^4.2.5",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router-hash-link": "^2.4.3",
